# fcitx5-paste-primary

./: CMakeLists.txt  README.md
archbuild/: PKGBUILD
po/: CMakeLists.txt  fcitx-paste-primary.pot  zh_CN.po
src/: CMakeLists.txt  fcitx-paste-primary.conf.in  fcitx-paste-primary.desc  paste-primary.c  paste-primary.conf.in  paste-primary.cpp  paste-primary.h
